--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 </div>
                 <div class="module-card-body">
                     <p>Explore how humans perceive visual information, from the structure of the eye to color perception and adaptation mechanisms.</p>
-                    <a href="#" class="btn">Explore Module</a>
+                    <a href="metamerism_demo.html" class="btn">Explore Module</a>
                 </div>
             </div>
             
@@ -322,7 +322,7 @@
                 </div>
                 <div class="module-card-body">
                     <p>Learn the mathematical foundations of signal processing essential for understanding audio and video systems.</p>
-                    <a href="#" class="btn">Explore Module</a>
+                    <a href="fourier_demo.html" class="btn">Explore Module</a>
                 </div>
             </div>
             
