--- a/metamerism_demo.html
+++ b/metamerism_demo.html
@@ -319,7 +319,7 @@
                     <li><a href="#">Light and Chromatic Adaptation</a></li>
                     <li><a href="#">Opponent Color Theory</a></li>
                     <li><a href="#">Psychophysical Laws</a></li>
-                    <li><a href="#">Module Quiz</a></li>
+                    <li><a href="visual_perception_quiz.html">Module Quiz</a></li>
                 </ul>
             </aside>
             
