--- a/metamerism_demo.html
+++ b/metamerism_demo.html
@@ -334,7 +334,8 @@
                     <h3>Interactive Metamerism Demonstration</h3>
                     
                     <div class="metamerism-demo">
-                        <img src="../multimedia/B AVT 20 Wahrnehmung - Metamerismus (c) David Long.png" alt="Metamerism demonstration showing spectral distributions" class="demo-image">
+                        <!-- Note: Image path may need to be updated to your actual image location -->
+                        <img src="B AVT 20 Wahrnehmung - Metamerismus (c) David Long.png" alt="Metamerism demonstration showing spectral distributions" class="demo-image">
                         
                         <div class="demo-controls">
                             <button class="demo-btn" id="show-real">Show Real Card Spectrum</button>
