--- a/opponent_color_theory_quiz.html
+++ b/opponent_color_theory_quiz.html
@@ -303,7 +303,8 @@
             <form id="quiz-form">
                 <div class="question-container image-question">
                     <p class="question">Which of the following best describes the opponent color theory?</p>
-                    <img src="../multimedia/B AVT 20 Wahrnehmung - Opponent Color.png" alt="Diagram of opponent color processing" class="demo-image">
+                    <!-- Note: Image path may need to be updated to your actual image location -->
+                    <img src="B AVT 20 Wahrnehmung - Opponent Color.png" alt="Diagram of opponent color processing" class="demo-image">
                     <ul class="options">
                         <li>
                             <label>
