--- a/photoreceptors_quiz.html
+++ b/photoreceptors_quiz.html
@@ -303,7 +303,8 @@
             <form id="quiz-form">
                 <div class="question-container image-question">
                     <p class="question">In the human retina, which type of photoreceptor cells are responsible for color vision?</p>
-                    <img src="../multimedia/B AVT 20 Wahrnehmung - Retina.png" alt="Diagram of human retina structure" class="demo-image">
+                    <!-- Note: Image path may need to be updated to your actual image location -->
+                    <img src="B AVT 20 Wahrnehmung - Retina.png" alt="Diagram of human retina structure" class="demo-image">
                     <ul class="options">
                         <li>
                             <label>
