--- a/stevens_power_law_quiz.html
+++ b/stevens_power_law_quiz.html
@@ -303,7 +303,8 @@
             <form id="quiz-form">
                 <div class="question-container image-question">
                     <p class="question">According to Stevens' Power Law, which of the following best describes the relationship between physical stimulus intensity and perceived magnitude?</p>
-                    <img src="../multimedia/B AVT 20 Wahrnehmung - Stevens Law.png" alt="Graph showing Stevens' Power Law relationship" class="demo-image">
+                    <!-- Note: Image path may need to be updated to your actual image location -->
+                    <img src="B AVT 20 Wahrnehmung - Stevens Law.png" alt="Graph showing Stevens' Power Law relationship" class="demo-image">
                     <ul class="options">
                         <li>
                             <label>
