--- a/opponent_color_theory_quiz.html
+++ b/opponent_color_theory_quiz.html
@@ -303,8 +303,10 @@
             <form id="quiz-form">
                 <div class="question-container image-question">
                     <p class="question">Which of the following best describes the opponent color theory?</p>
-                    <!-- Note: Image path may need to be updated to your actual image location -->
-                    <img src="B AVT 20 Wahrnehmung - Opponent Color.png" alt="Diagram of opponent color processing" class="demo-image">
+                    <div style="border: 1px dashed #ccc; padding: 20px; margin: 15px 0; text-align: center; background-color: #f8f9fa;">
+                        <p><strong>Image Description:</strong> Diagram illustrating opponent color processing showing how visual signals are processed in opposing pairs: red-green, blue-yellow, and black-white.</p>
+                        <p><small>Note: This represents where the image of opponent color theory would appear.</small></p>
+                    </div>
                     <ul class="options">
                         <li>
                             <label>
