--- a/photoreceptors_quiz.html
+++ b/photoreceptors_quiz.html
@@ -303,8 +303,10 @@
             <form id="quiz-form">
                 <div class="question-container image-question">
                     <p class="question">In the human retina, which type of photoreceptor cells are responsible for color vision?</p>
-                    <!-- Note: Image path may need to be updated to your actual image location -->
-                    <img src="B AVT 20 Wahrnehmung - Retina.png" alt="Diagram of human retina structure" class="demo-image">
+                    <div style="border: 1px dashed #ccc; padding: 20px; margin: 15px 0; text-align: center; background-color: #f8f9fa;">
+                        <p><strong>Image Description:</strong> Diagram showing the structure of the human retina with photoreceptors (rods and cones), bipolar cells, and ganglion cells.</p>
+                        <p><small>Note: This represents where the image of retina structure would appear.</small></p>
+                    </div>
                     <ul class="options">
                         <li>
                             <label>
