--- a/stevens_power_law_quiz.html
+++ b/stevens_power_law_quiz.html
@@ -303,8 +303,10 @@
             <form id="quiz-form">
                 <div class="question-container image-question">
                     <p class="question">According to Stevens' Power Law, which of the following best describes the relationship between physical stimulus intensity and perceived magnitude?</p>
-                    <!-- Note: Image path may need to be updated to your actual image location -->
-                    <img src="B AVT 20 Wahrnehmung - Stevens Law.png" alt="Graph showing Stevens' Power Law relationship" class="demo-image">
+                    <div style="border: 1px dashed #ccc; padding: 20px; margin: 15px 0; text-align: center; background-color: #f8f9fa;">
+                        <p><strong>Image Description:</strong> Graph showing the power function relationship between physical stimulus intensity and perceived magnitude according to Stevens' Power Law: Ψ = kΦⁿ.</p>
+                        <p><small>Note: This represents where the image of Stevens' Power Law graph would appear.</small></p>
+                    </div>
                     <ul class="options">
                         <li>
                             <label>
