--- a/metamerism_demo.html
+++ b/metamerism_demo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'self' https://vonpgqcn.manus.space https://vonpgqcn.usercontents.app">
+    <!-- Content Security Policy moved to HTTP headers for better security -->
     <title>Visual Perception Module - Metamerism Demo</title>
     <style>
         :root {
@@ -313,13 +313,14 @@
             <aside class="sidebar">
                 <h3>Module Topics</h3>
                 <ul class="topic-list">
-                    <li><a href="#">Retina Structure and Function</a></li>
-                    <li><a href="#">Visual Resolution and Acuity</a></li>
-                    <li class="active"><a href="#">Color Perception and Metamerism</a></li>
-                    <li><a href="#">Light and Chromatic Adaptation</a></li>
-                    <li><a href="#">Opponent Color Theory</a></li>
-                    <li><a href="#">Psychophysical Laws</a></li>
-                    <li><a href="visual_perception_quiz.html">Module Quiz</a></li>
+                    <li><a href="index.html">Return to Home</a></li>
+                    <li class="active"><a href="metamerism_demo.html">Color Perception and Metamerism</a></li>
+                    <li><a href="metamerism_quiz.html">Metamerism Quiz</a></li>
+                    <li><a href="photoreceptors_quiz.html">Photoreceptors</a></li>
+                    <li><a href="opponent_color_theory_quiz.html">Opponent Color Theory</a></li>
+                    <li><a href="visual_adaptation_quiz.html">Visual Adaptation</a></li>
+                    <li><a href="stevens_power_law_quiz.html">Stevens' Power Law</a></li>
+                    <li><a href="visual_perception_quiz.html">Complete Module Quiz</a></li>
                 </ul>
             </aside>
             
@@ -368,8 +369,8 @@
                 <p>In the next section, we'll explore how our visual system adapts to different lighting conditions through light and chromatic adaptation mechanisms.</p>
                 
                 <div class="navigation-buttons">
-                    <a href="#" class="nav-btn">← Previous: Visual Resolution</a>
-                    <a href="#" class="nav-btn">Next: Light Adaptation →</a>
+                    <a href="index.html" class="nav-btn">← Back to Home</a>
+                    <a href="metamerism_quiz.html" class="nav-btn">Test Your Knowledge: Metamerism Quiz →</a>
                 </div>
             </main>
         </div>
