--- a/stevens_power_law_quiz.html
+++ b/stevens_power_law_quiz.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'self' https://vonpgqcn.manus.space https://vonpgqcn.usercontents.app">
+    <!-- Content Security Policy moved to HTTP headers for better security -->
     <title>Visual Perception - Stevens' Power Law Quiz</title>
     <style>
         :root {
