--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                 </div>
                 <div class="module-card-body">
                     <p>Learn the mathematical foundations of signal processing essential for understanding audio and video systems.</p>
-                    <a href="fourier_demo.html" class="btn">Explore Module</a>
+                    <a href="signals_intro.html" class="btn">Explore Module</a>
                 </div>
             </div>
             
